--- a/window.html
+++ b/window.html
@@ -12,7 +12,7 @@
       </label>
 
       <div style="margin-top:8px; opacity:.85; font-size:12px;">
-        프리셋 선택 &gt; BGM 추가 &gt; 각 BGM에 키워드 입력
+            사용방법: Settings &gt; 프리셋 선택 &gt; BGM 추가 &gt; 각 BGM에 키워드 입력
       </div>
 
       <div class="flex row-reverse align-center justify-end gap-12" style="margin-top:10px;">
